--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,4 +1,3 @@
-@import "mixing";
 
 		@media(min-width:100px) 
 			{
@@ -7,6 +6,7 @@
 					grid-template-areas:
 					"nav" "header" "main" 
 					"footer";
+					background-image: map-get($map: $paletadefondos,$key:'uno');
 				
 			 }
 	//discografia//
@@ -14,6 +14,7 @@
 				@include grid (grid,100%, 100vh, 1, 0);	
 					grid-template-areas:
 					"nav" "header" "main" "footer";
+					background-image: map-get($map: $paletadefondos,$key:'dos');
 			}
 	//galeria//
 			.contenedorgridgaleria{
@@ -32,6 +33,7 @@
 				@include grid (grid,100%, 100vh, 1, 0);	
 					grid-template-areas:
 					"nav" "header" "main" "footer";
+					background-image: map-get($map: $paletadefondos,$key:'tres');
 			}
 				#form {
 					display: flex !important;
