--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -6,7 +6,7 @@
 					grid-template-areas:
 					"nav" "header" "main" 
 					"footer";
-					background-image: map-get($map: $paletadefondos,$key:'uno');
+				/*	background-image: map-get($map: $paletadefondos,$key:'uno');*/
 				
 			 }
 	//discografia//
@@ -14,7 +14,7 @@
 				@include grid (grid,100%, 100vh, 1, 0);	
 					grid-template-areas:
 					"nav" "header" "main" "footer";
-					background-image: map-get($map: $paletadefondos,$key:'dos');
+					/*background-image: map-get($map: $paletadefondos,$key:'dos');*/
 			}
 	//galeria//
 			.contenedorgridgaleria{
@@ -33,7 +33,7 @@
 				@include grid (grid,100%, 100vh, 1, 0);	
 					grid-template-areas:
 					"nav" "header" "main" "footer";
-					background-image: map-get($map: $paletadefondos,$key:'tres');
+				/*	background-image: map-get($map: $paletadefondos,$key:'tres');*/
 			}
 				#form {
 					display: flex !important;
@@ -116,7 +116,7 @@
 				grid-template-areas: 
 		"nav nav " "main header" 
 		"footer footer";
-				grid-gap:9px;
+				grid-gap:5px;
 			}
 			//GALERIA//		
 		.contenedorgridgaleria{
