--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,12 +14,29 @@
 html {
 	font-size: 62.5%;
 }
-body { min-height: 100%; 
-	background-color:black;
+
+body {min-height: 100%; 
+	background-image: linear-gradient(135deg, #282323FF, #141414FF,black);
+	background-size: 300%;
+	animation: anima 7s infinite linear alternate;
 }
+@keyframes anima{
+		0%{
+			background-position: 0% 50%;
+		}
+		50%{
+			background-position: 100% 50%;
+		}
+		100%{
+			background-position: 0% 50%;
+		}
+}
+
+
 header img{ 
+	
 	width: 100%;
-	height: 95%;
+	height: 100%;
 }
 main div div {
 	text-align: center;
@@ -57,7 +74,8 @@ p { text-align: justify;
 h1{
 	//degradado//
 	font-weight: 500;
-	background: linear-gradient(to right, $color__titulos , darkred);
+	background: linear-gradient(to right, #262626FF, #262626FF, $color__blanco, white
+	);
 		-webkit-background-clip:text;
 		background-clip:text;
 		-webkit-text-fill-color: transparent;
@@ -97,8 +115,13 @@ select {
 	background-color:$color__azure;
 }
 
+
+
+
 table {
-	background-color: #3B3B44FF;
+	background-image: linear-gradient(135deg, #141414FF, darkblue,#141414FF);
+	background-size: 500%;
+	animation: anima 7s infinite;
 	td{
 		font-size: $letra__chica;
 		text-align: center;
@@ -174,5 +197,29 @@ table {
 			background-color:darkgreen;
 			filter: brightness(170%);
 		}
-
 }
+
+/*@keyframes movimiento {
+	from {
+		background-position: bottom left;
+	}
+	to {
+		background-position: top right;
+	}
+}
+
+.movi{
+	animation: movimiento 10s infinite linear alternate;
+	
+}*/
+/*@keyframes animado{
+	0%{
+		background-position: 0% 50%;
+	}
+	50%{
+		background-position: 100% 50%;
+	}
+	100%{
+		background-position: 0% 50%;
+	}
+}*/
