subida entrega final 3

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -25,7 +25,7 @@ footer {
 				box-shadow: 0 0 0 0 rgba(203, 202,202, 5);box-shadow: 0 0 0 3px rgba(203, 202,202, 5);
 			}
 		}
-	footer article img {
+ 		article img {
 		filter: brightness(80%);
 		transition: transform .4s;
 		&:hover{
