--- a/css/style.css
+++ b/css/style.css
@@ -200,10 +200,10 @@ h5 {
     box-shadow: 0 0 0 0 #cbcaca;
     box-shadow: 0 0 0 3px #cbcaca; } }
 
-footer article img {
+article img {
   filter: brightness(80%);
   transition: transform .4s; }
-  footer article img:hover {
+  article img:hover {
     filter: brightness(100%);
     transform: scale(1.1);
     z-index: 1;
@@ -306,16 +306,16 @@ select {
   background-color: azure; }
 
 table {
-  background-image: linear-gradient(135deg, #141414FF, darkblue, #141414FF);
+  background-image: linear-gradient(135deg, #141414FF, #3D3D3DFF, #3D3D3DFF, #141414FF);
   background-size: 500%;
-  animation: anima 7s infinite; }
+  animation: anima 8s infinite; }
   table td {
     font-size: 1.2rem;
     text-align: center;
     color: #D9DBDE; }
   table th {
     text-align: center;
-    color: #0d6efd; }
+    color: azure; }
 
 .text-left {
   text-align: left; }
@@ -366,7 +366,7 @@ table {
   text-decoration: none;
   height: 3rem;
   width: 7Rem;
-  background-color: #0d6efd;
+  background-color: #D9DBDE;
   font-weight: bold;
   margin-left: 1rem;
   transition: .3s ease all;
