--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -15,7 +15,8 @@
 		.container-fluid{
 				ul{ margin: auto;
 					align-content: center;
-					align-items: center;						list-style: none;
+					align-items: center;						
+					list-style: none;
 					font-size: 2rem;
 					padding: 1rem;
 					margin-top: 2rem;
