--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,10 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Rubik+Wet+Paint&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
+//variables de tipos de letras//
+$letra__roboto: 'Roboto', sans-serif;
+$letra__footer: 'Varela Round', sans-serif;
+
+
+//variables de tamaño de letra//
+$letra__chica:1.2rem;
+$letra__media:1.5rem;
+$letra__semigrande:1.8rem;
+$letra__grande:2rem;
+$letra__supergrande:3.5rem;
 //variables globales//
 $color__titulos: #0d6efd;
 $color__blanco:#D9DBDE;
 $color__negro:black;
 $color__nav_footer:#2C2A2A;
-$color__botones:#8C1212;
 $color__azure:azure;
 
+$paletadecolor:(
+	'uno':$color__titulos,
+	'dos':$color__blanco,
+	'tres':$color__nav_footer,
+	'cuatro':$color__azure,
+
+)
 
