--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,9 @@ table {
   background-color: darkgreen;
   filter: brightness(170%); }
 
+.navbar-toggler {
+  background-color: #4F4F4FFF; }
+
 /*@keyframes movimiento {
 	from {
 		background-position: bottom left;
