--- a/scss/main.scss
+++ b/scss/main.scss
@@ -197,7 +197,9 @@ table {
 			filter: brightness(170%);
 		}
 }
-
+.navbar-toggler {
+	background-color:#4F4F4FFF;
+}
 /*@keyframes movimiento {
 	from {
 		background-position: bottom left;
