--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,9 +15,12 @@ html {
 }
 
 body {min-height: 100%; 
-	background-image: linear-gradient(135deg, #282323FF, #141414FF,black);
+	background-image: linear-gradient(135deg, #282323FF, #141414FF, black);
 	background-size: 300%;
-	animation: anima 7s infinite linear alternate;
+	
+}
+.ani{
+	animation:anima 8s infinite linear alternate;
 }
 @keyframes anima{
 		0%{
@@ -118,7 +121,7 @@ select {
 
 
 table {
-	background-image: linear-gradient(135deg, #141414FF, #3D3D3DFF,#3D3D3DFF, #141414FF);
+	background-image: linear-gradient(135deg, #141414FF, #3D3D3DFF, #141414FF);
 	background-size: 500%;
 	animation: anima 8s infinite;
 	td{
