--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,7 +82,7 @@ h1{
 		background-clip:text;
 		-webkit-text-fill-color: transparent;
 }
-h2, h3 , h6 , h5{
+h2, h3 , h6{
 	color:map-get($map: $paletadecolor,$key:'dos');
 	font-size: bold;
 }
@@ -195,35 +195,22 @@ table {
 //extend //
 .boton__enviar{
 	@extend .boton__cancelar;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1.4rem;
+	text-decoration: none;
+	height: 3rem;
+	width: 7Rem;
+	background-color:map-get($map: $paletadecolor,$key:'dos');
+	font-weight: bold;
+	margin-left: 1rem;
+	transition: .3s ease all;
+	filter: brightness(80%);
 	&:hover{
 			background-color:darkgreen;
 			filter: brightness(170%);
 		}
 }
 .navbar-toggler {
-	background-color:#4C4C4CFF;
+	background-color:#474747FF;
+	border-color: black;
 }
-/*@keyframes movimiento {
-	from {
-		background-position: bottom left;
-	}
-	to {
-		background-position: top right;
-	}
-}
-
-.movi{
-	animation: movimiento 10s infinite linear alternate;
-	
-}*/
-/*@keyframes animado{
-	0%{
-		background-position: 0% 50%;
-	}
-	50%{
-		background-position: 100% 50%;
-	}
-	100%{
-		background-position: 0% 50%;
-	}
-}*/
