--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Rubik+Wet+Paint&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 //variables de tipos de letras//
 $letra__roboto: 'Roboto', sans-serif;
 $letra__footer: 'Varela Round', sans-serif;
