--- a/scss/main.scss
+++ b/scss/main.scss
@@ -237,8 +237,10 @@ table {
 }
 //pagina 404//
 .contenedor{
+	height: 50%
+;
 	background-image: url("../img/space1.jpg");
-	background-size: 200%;
+	background-size: 100%;
 	.luna {
 		display: inline-block;
 	}
