--- a/css/style.css
+++ b/css/style.css
@@ -220,9 +220,14 @@ html {
   font-size: 62.5%; }
 
 body {
-  min-height: 100%;
+  min-height: 100%; }
+
+.body-gale {
+  background-color: #0F0F0FFF; }
+
+.body-back {
   background-image: linear-gradient(135deg, white, #141414FF, black);
-  background-size: 500%;
+  background-size: 300%;
   animation: anima 8s infinite; }
 
 .ani {
@@ -420,9 +425,10 @@ table {
 
 .contenedor {
   background-image: url("../img/space1.jpg");
-  background-size: 200%; }
+  background-size: 100vh; }
   .contenedor .luna {
-    display: inline-block; }
+    display: inline-block;
+    height: 550px; }
   .contenedor .error4 {
     background-color: rgba(40, 29, 123, 0.5);
     color: red;
