--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,7 +26,7 @@ body {min-height: 100%;
 
 //fondo de tour home y contacto//
 .body-back{
-	background-image: linear-gradient(135deg, white, #141414FF,black);
+	background-image: linear-gradient(135deg, #545454FF, #141414FF,black);
 	background-size:300%;
 	animation: anima 8s infinite;
 }
