--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -2,7 +2,7 @@
 		@media(min-width:100px) 
 			{
 			.contenedorgrid {
-				@include grid (grid,100%, 100%, 1, 0);	
+				@include grid (grid,100%, 100vh, 1, 0);	
 					grid-template-areas:
 					"nav" "header" "main" 
 					"footer";
@@ -45,10 +45,14 @@
 }
 /*media queries 768 HOME*/
 @media(min-width: 768px) 
-	{
-	.navbar{
-		height: 10vh;
-	}	
+	{ 
+		main h1{
+			margin-top:6rem;
+		}
+		.navbar{
+		height: 8vh;
+		padding-top: 1.5rem;
+	}
 		nav div ul li {
 				display: inline-block;
 				align-content: center;
@@ -57,7 +61,9 @@
 			}
 		.contenedorgrid {
 			@include grid (grid,100%, 100vh, 2, 7px);		
+		grid-template-rows:7% 80% 10% ;
 		grid-template-areas:
+
 		"nav nav" "header main" "footer footer";		
 		}
 		//DISCOGRAFIA//
@@ -82,11 +88,15 @@
 		//TOUR//
 		.contenedorgridtour{
 			@include grid (grid,100%, 100vh, 2,7px );
+		grid-template-rows:7% auto 10% ;
 		grid-template-areas: 
 		"nav nav " 
-		"header header"
-		"main main" 
+		" main header"
 		"footer footer";
+		main h1{
+			margin-top:6rem;
+		}
+
 	}
 	//CONTACTO//
 	.contenedorgridcont{
@@ -123,10 +133,11 @@
 			grid-template-columns:repeat(4, 1fr);
 			grid-template-areas: 
 			"nav nav nav nav"
-			"header header header header"
-			"main main main main"
+			"main main header header"
 			"footer footer footer footer";
+
 		}
+		
 		//discografia//
 		.contenedorgriddisco{
 			grid-template-columns:repeat(3, 1fr);
