--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -17,9 +17,9 @@ $letra__supergrande:3.5rem;
 $color__titulos: #0d6efd;
 $color__blanco:#D9DBDE;
 $color__negro:black;
-$color__nav_footer:#2C2A2A;
+$color__nav_footer: rgba(48, 57, 79, .8);
 $color__azure:azure;
-
+//mapa de colores//
 $paletadecolor:(
 	'uno':$color__titulos,
 	'dos':$color__blanco,
