--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,21 +15,10 @@ html {
 }
 
 body {min-height: 100%; 
-	
+	background-color:#121111FF;
 }
 //fondo de galeria y discografia//
-.body-gale{
-	background-color: #0F0F0FFF;
-}
 
-
-
-//fondo de tour home y contacto//
-.body-back{
-	background-image: linear-gradient(135deg, #545454FF, #141414FF,black);
-	background-size:300%;
-	animation: anima 8s infinite;
-}
 .ani{
 	animation:anima 8s infinite linear alternate;
 }
@@ -87,7 +76,7 @@ p { text-align: justify;
 h1{
 	//degradado//
 	font-weight: 500;
-	background: linear-gradient(to right, #262626FF, darkgrey, #262626FF, $color__blanco, white
+	background: linear-gradient(to right, #0001FFFF, darkgrey,rgb(48, 57, 95) , $color__blanco, white
 	);
 		-webkit-background-clip:text;
 		background-clip:text;
@@ -114,7 +103,7 @@ textarea {
 }
 label {
 	font-size: $letra__media;
-	color:map-get($map: $paletadecolor,$key:'dos');;
+	color:map-get($map: $paletadecolor,$key:'dos');
 	margin: 0.7rem;
 	margin-left: 18px;}
 input {
@@ -132,7 +121,9 @@ select {
 
 
 table {
-	background-image: linear-gradient(135deg, #141414FF, #3D3D3DFF, #141414FF);
+	align-content: center;
+	max-width: 800px;
+	background-image: linear-gradient(135deg, rgb(48, 57, 79), rgb(48, 57, 89), rgb(48, 57, 95));
 	background-size: 500%;
 	animation: anima 8s infinite;
 	td{
@@ -144,11 +135,15 @@ table {
 		text-align: center;
 		color: map-get($map: $paletadecolor,$key:'cuatro');
 	}
-}.text-left{
+}
+.text-left{
 	text-align: left;
 }
-.blanco{
-	color: $color__blanco;
+.blanco{border:solid;
+	border-color: $color__blanco;
+	border-width:.5rem;
+	border-image : 30px;
+		border-radius : 10px;
 }
 .paddingdere {
 	padding: 1rem 1rem 1rem 5rem;
@@ -156,9 +151,7 @@ table {
 
 
 .paddingto{
-	margin: 4rem 0rem 0rem 0rem;
-	;
-
+	margin: 5rem 0rem 0rem 0rem;
 }
 .paddingfo{
 	margin: 5rem 1rem 3rem 1rem;
@@ -191,6 +184,7 @@ table {
 	margin: 4rem;
 }
 .boton-escuchar{
+	color:$color__blanco;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1rem;
 	padding:.7rem;
@@ -198,8 +192,7 @@ table {
 	text-decoration: none;
 	height: 2.2rem;
 	width: auto;
-	color:black;
-	background-color:map-get($map: $paletadecolor,$key:'dos');
+	background-color:rgba(48, 57, 79, 1.0);
 	font-weight: bold;
 	margin-left: 1rem;
 	filter: brightness(80%);
@@ -209,12 +202,14 @@ table {
 		}
 }
 .boton__cancelar{
+	color:$color__blanco;
+	border-color:$color__blanco;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.4rem;
 	text-decoration: none;
 	height: 3rem;
 	width: 7Rem;
-	background-color:map-get($map: $paletadecolor,$key:'dos');
+	background-color:map-get($map: $paletadecolor,$key:'tres');
 	font-weight: bold;
 	margin-left: 1rem;
 	transition: .3s ease all;
@@ -232,7 +227,7 @@ table {
 	text-decoration: none;
 	height: 3rem;
 	width: 7Rem;
-	background-color:map-get($map: $paletadecolor,$key:'dos');
+	background-color:map-get($map:$paletadecolor,$key:'tres');
 	font-weight: bold;
 	margin-left: 1rem;
 	transition: .3s ease all;
@@ -319,3 +314,22 @@ table {
   from { top: 0; } to { top: 280px; }
 }
 
+.negrito{
+	background-color: #030205FF;
+}
+.imgm{
+	width: 80%;
+	height: 70%;
+	border-radius: 35px;
+margin-bottom:8rem;
+	border-width:.5rem;
+	border:solid;
+	color:$color__blanco;
+}
+.contenedor_contactos-fondo{
+	margin:1rem;
+	padding: 1.5rem;
+	background-color:rgba(48, 57, 79, .5);
+	border-radius:40px;
+	border-color:#788199;
+}
