--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     grid-template-areas: "nav" "header" "main"  "footer";
     /*	background-image: map-get($map: $paletadefondos,$key:'uno');*/ }
     .contenedorgrid main h1 {
-      margin-top: 6rem; }
+      margin-top: 8rem; }
   .contenedorgriddisco {
     display: grid;
     width: 100%;
@@ -52,8 +52,6 @@
 
 /*media queries 768 HOME*/
 @media (min-width: 768px) {
-  main h1 {
-    margin-top: 6rem; }
   .navbar {
     height: 8vh;
     padding-top: 1.5rem; }
@@ -229,7 +227,7 @@ html {
 
 body {
   min-height: 100%;
-  background-color: #121111FF; }
+  background-color: #1f2124; }
 
 .ani {
   animation: anima 8s infinite linear alternate; }
@@ -277,7 +275,7 @@ p {
 
 h1 {
   font-weight: 500;
-  background: linear-gradient(to right, #0001FFFF, darkgrey, #30395f, #D9DBDE, white);
+  background: linear-gradient(to right, #22bdc3, #4f2dfd, #D9DBDE);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent; }
@@ -316,6 +314,7 @@ select {
   background-color: azure; }
 
 table {
+  margin-top: 2rem;
   align-content: center;
   max-width: 800px;
   background-image: linear-gradient(135deg, #30394f, #303959, #30395f);
@@ -380,7 +379,7 @@ table {
   margin: 4rem; }
 
 .boton-escuchar {
-  color: #D9DBDE;
+  color: #00ADFFFF;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
   padding: .7rem;
@@ -397,7 +396,7 @@ table {
     filter: brightness(100%); }
 
 .boton__cancelar, .boton__enviar {
-  color: #D9DBDE;
+  color: #00ADFFFF;
   border-color: #D9DBDE;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.4rem;
@@ -537,3 +536,8 @@ table {
   background-color: rgba(48, 57, 79, 0.5);
   border-radius: 40px;
   border-color: #788199; }
+
+.contenedorimg {
+  padding-left: 9rem;
+  width: 80%;
+  height: auto; }
