--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,9 +1,12 @@
 
 		@media(min-width:100px) 
 			{
+				.contenedorimg{
+
+		}
 			.contenedorgrid {
 					main h1{
-			margin-top:6rem;
+			margin-top:8rem;
 		}
 				@include grid (grid,100%, 100vh, 1, 0);	
 					grid-template-areas:
@@ -48,10 +51,8 @@
 }
 /*media queries 768 HOME*/
 @media(min-width: 768px) 
+           
 	{ 
-		main h1{
-			margin-top:6rem;
-		}
 		.navbar{
 		height: 8vh;
 		padding-top: 1.5rem;
