--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -24,7 +24,7 @@ $paletadecolor:(
 	'uno':$color__titulos,
 	'dos':$color__blanco,
 	'tres':$color__nav_footer,
-	'cuatro':$color__azure,
+	'cuatro':#A5C1CEFF,
 
 )
 
