--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@
     grid-template-areas: "nav nav nav" "header header header" "main main main" "footer footer footer footer"; } }
 
 .navbar {
+  margin: auto;
   color: #0d6efd;
   background-color: rgba(48, 57, 79, 0.5);
   display: flex;
@@ -151,12 +152,13 @@
       .navbar .container-fluid ul li a {
         font-family: "Varela Round", sans-serif;
         display: flex;
+        flex-direction: column;
         align-items: center;
-        color: #D9DBDE;
+        color: #FFFFFFFF;
         text-decoration: none;
         font-size: 2rem;
         align-content: center;
-        filter: brightness(80%);
+        filter: brightness(100%);
         transition: transform 0.5s; }
         .navbar .container-fluid ul li a:hover {
           filter: brightness(160%);
