bueno me voy a dormir un rato

--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -1,5 +1,6 @@
 
-.navbar{margin: auto;
+.navbar{
+	margin: auto;
 	color:$color__titulos;
 	background-color:rgba(48, 57, 79, .5);
 	display: flex;
