--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
     height: 100vh;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0;
-    grid-template-areas: "nav" "header" "main"  "footer";
+    grid-template-areas: "nav" "header" "main" 
+ "footer";
     /*	background-image: map-get($map: $paletadefondos,$key:'uno');*/ }
     .contenedorgrid main h1 {
       margin-top: 8rem; }
@@ -74,7 +75,8 @@
     height: 100vh;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 7px;
-    grid-template-areas: "nav nav nav" "header header header" "main main main" "footer footer footer"; }
+    grid-template-areas: "nav nav nav" "header header header"
+ "main main main" "footer footer footer"; }
   main div article {
     display: flex;
     justify-content: space-around;
@@ -88,7 +90,8 @@
     height: 100vh;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 7px;
-    grid-template-areas: "nav nav nav nav" "header header header header" "main main main main" "footer footer footer footer"; }
+    grid-template-areas: "nav nav nav nav" "header header header header"
+ "main main main main" "footer footer footer footer"; }
   .contenedorgridtour {
     display: grid;
     width: 100%;
@@ -96,7 +99,9 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 7px;
     grid-template-rows: 7% auto 10%;
-    grid-template-areas: "nav nav "  " main header" "footer footer"; }
+    grid-template-areas: "nav nav " 
+ " main header"
+ "footer footer"; }
     .contenedorgridtour main h1 {
       margin-top: 6rem; }
   .contenedorgridcont {
@@ -105,7 +110,8 @@
     height: 100vh;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 7px;
-    grid-template-areas: "nav nav " "header header"  "main main" "footer footer"; } }
+    grid-template-areas: "nav nav " "header header" 
+ "main main" "footer footer"; } }
 
 /*media queries 1024 HOME*/
 @media (min-width: 1024px) {
@@ -115,16 +121,26 @@
     height: 100vh;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 9px;
-    grid-template-areas: "nav nav" "header header" "main main" "footer footer"; }
+    grid-template-areas: "nav nav"
+ "header header"
+ "main main"
+ "footer footer"; }
   .contenedorgridtour {
-    grid-template-areas: "nav nav " "main header"  "footer footer";
+    grid-template-areas: "nav nav " "main header" 
+ "footer footer";
     grid-gap: 5px; }
   .contenedorgridgaleria {
     grid-template-columns: repeat(4, 1fr);
-    grid-template-areas: "nav nav nav nav" "header header header header" "main main main main" "footer footer footer footer"; }
+    grid-template-areas: "nav nav nav nav"
+ "header header header header"
+ "main main main main"
+ "footer footer footer footer"; }
   .contenedorgriddisco {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: "nav nav nav" "header header header" "main main main" "footer footer footer footer"; } }
+    grid-template-areas: "nav nav nav"
+ "header header header"
+ "main main main"
+ "footer footer footer footer"; } }
 
 .navbar {
   margin: auto;
@@ -342,13 +358,6 @@ table {
 .text-left {
   text-align: left; }
 
-.blanco {
-  border: solid;
-  border-color: #D9DBDE;
-  border-width: .5rem;
-  border-image: 30px;
-  border-radius: 10px; }
-
 .paddingdere {
   padding: 1rem 1rem 1rem 5rem; }
 
@@ -548,7 +557,8 @@ table {
   padding: 1.5rem;
   background-color: rgba(48, 57, 79, 0.5);
   border-radius: 40px;
-  border-color: #788199; }
+  border-color: #788199;
+  box-shadow: 0 0 8px #30394f, 0 0 16px #30394f, 0 0 24px #30394f; }
 
 .contenedorimg {
   padding-left: 9rem;
@@ -585,3 +595,10 @@ table {
 
 .bordergif {
   border-radius: 240px; }
+
+.blanco {
+  border: solid;
+  border-color: #D9DBDE;
+  border-image: 44px;
+  border-radius: 10px;
+  padding: 1rem; }
